--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
                 <ul>
                     <li><a href="#">inicio</a></li>
                     <li><a href="#">sobre min</a></li>
-                    <li><a href="#">progetos</a></li>
+                    <li><a href="#">projetos</a></li>
                     <li><a href="#">habilidades</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main class="inicio">
-        <section class="sobre-min">
-            <h1>Olá muito pazer, Sou <br> Luiz Otávio Nacimento <br> Desenvolvedor Font-end
+        <section class="inicio">
+            <h1 class="titulo">Olá muito pazer, Sou <br> Luiz Otávio Nacimento <br> Desenvolvedor Font-end
             </h1>
         </section>
     </main>
@@ -36,8 +36,8 @@
             </p>
         </section>
     </main>
-    <main class="progetos">
-        <section class="progetos">
+    <main class="projetos">
+        <section class="projetos">
             <h2>Meus Progetos</h2>
         </section>
     </main>
@@ -46,8 +46,9 @@
             <h2>Habilidades</h2>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <p>contato@...</p>
+        <p>website by Luiz</p>
     </footer>
 </body>
 </html>
