--- a/index.html
+++ b/index.html
@@ -22,33 +22,39 @@
             </nav>
         </div>
     </header>
+    <!--Parte um-->
     <main class="inicio">
         <section class="inicio">
-            <h1 class="titulo">Olá muito pazer, Sou <br> Luiz Otávio Nacimento <br> Desenvolvedor Font-end
-            </h1>
+            <h2 class="titulo-um">Olá muito pazer, Sou </h2>
+            <h1 class="titulo-pr">Luiz Otávio Nacimento</h1>
+            <h2 class="titulo-dois">Desenvolvedor Font-end</h2>
+            <img src="img/minha-foto.jpeg" class="foto" alt="minha-foto">
         </section>
     </main>
+    <!--Parte dois-->
     <main class="sobre-min">
         <section class="sobre-min">
-            <h2>Sobre Min</h2>
+            <h2 class="">Sobre Min</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis non aut consequuntur esse cupiditate molestiae magnam cumque, amet ducimus veniam expedita officia aliquam deserunt est et quam? Necessitatibus, cum minus.
             </p>
         </section>
     </main>
+    <!--Parte três-->
     <main class="projetos">
         <section class="projetos">
             <h2>Meus Progetos</h2>
         </section>
     </main>
+    <!--Parte quatro-->
     <main class="habilidades">
         <section>
             <h2>Habilidades</h2>
         </section>
     </main>
     <footer class="footer">
-        <p>contato@...</p>
-        <p>website by Luiz</p>
+        <p>contato.luizottavio@gmail.com</p>
+        <p>website by Luiz Otávio Nascimento</p>
     </footer>
 </body>
 </html>
