--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <!--Parte um-->
     <main class="inicio">
         <section class="inicio">
-            <h2 class="titulo-um">Olá muito pazer, Sou </h2>
+            <h2 class="titulo-um">/* Olá muito pazer, Sou </h2>
             <h1 class="titulo-pr">Luiz Otávio Nacimento</h1>
-            <h2 class="titulo-dois">Desenvolvedor Font-end</h2>
+            <h2 class="titulo-dois">Desenvolvedor Font-end */</h2>
             <img src="img/minha-foto.jpeg" class="foto" alt="minha-foto">
         </section>
     </main>
