--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a href="#">sobre min</a></li>
                     <li><a href="#">projetos</a></li>
                     <li><a href="#">habilidades</a></li>
+                    <img src="#" alt="">
                 </ul>
             </nav>
         </div>
