Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Luiz Otávio Nacimento</title>
+
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
-    <title>Luiz Otávio Nacimento</title>
+    <link rel="stylesheet" href="font/Minecrafter.Alt.ttf">
+   
 
 </head>
 <body>
     <header class="header">
         <div class="caixa">
-            <nav>
+            <nav> 
                 <ul>
                     <li><a href="#">inicio</a></li>
                     <li><a href="#">sobre min</a></li>
                     <li><a href="#">projetos</a></li>
                     <li><a href="#">habilidades</a></li>
-                    <img src="#" alt="">
+                    <!--icones HTML JS css-->
                 </ul>
             </nav>
         </div>
+        <h2> <img class="logo" src="img/html.png" alt=""></h2>
     </header>
     <!--Parte um-->
     <main class="inicio">
@@ -35,8 +39,8 @@
     <!--Parte dois-->
     <main class="sobre-min">
         <section class="sobre-min">
-            <h2 class="">Sobre Min</h2>
-            <p>
+            <h2 class="titulo-de-secao">Sobre Min</h2>
+            <p class="paragrafo-sm">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis non aut consequuntur esse cupiditate molestiae magnam cumque, amet ducimus veniam expedita officia aliquam deserunt est et quam? Necessitatibus, cum minus.
             </p>
         </section>
@@ -44,13 +48,13 @@
     <!--Parte três-->
     <main class="projetos">
         <section class="projetos">
-            <h2>Meus Progetos</h2>
+            <h2 class="titulo-de-secao">Meus Progetos</h2>
         </section>
     </main>
     <!--Parte quatro-->
     <main class="habilidades">
         <section>
-            <h2>Habilidades</h2>
+            <h2 class="titulo-de-secao">Habilidades</h2>
         </section>
     </main>
     <footer class="footer">
