Update header and footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav> 
                 <ul>
                     <li><a href="#">inicio</a></li>
-                    <li><a href="#">sobre min</a></li>
+                    <li><a href="#">sobre mim</a></li>
                     <li><a href="#">projetos</a></li>
                     <li><a href="#">habilidades</a></li>
                     <!--icones HTML JS css-->
@@ -39,7 +39,7 @@
     <!--Parte dois-->
     <main class="sobre-min">
         <section class="sobre-min">
-            <h2 class="titulo-de-secao">Sobre Min</h2>
+            <h2 class="titulo-de-secao">Sobre Mim</h2>
             <p class="paragrafo-sm">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis non aut consequuntur esse cupiditate molestiae magnam cumque, amet ducimus veniam expedita officia aliquam deserunt est et quam? Necessitatibus, cum minus.
             </p>
@@ -48,7 +48,7 @@
     <!--Parte três-->
     <main class="projetos">
         <section class="projetos">
-            <h2 class="titulo-de-secao">Meus Progetos</h2>
+            <h2 class="titulo-de-secao">Meus Projetos</h2>
         </section>
     </main>
     <!--Parte quatro-->
