Update style.css flexbox

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 </head>
 <body>
     <header class="header">
-        <div class="caixa">
+        <div class="conteiner">
             <nav> 
                 <ul>
                     <li><a href="#">inicio</a></li>
                     <li><a href="#">sobre mim</a></li>
                     <li><a href="#">projetos</a></li>
                     <li><a href="#">habilidades</a></li>
-                    <!--icones HTML JS css-->
                 </ul>
             </nav>
+            <h2> <img class="logo" src="img/html.png" alt=""></h2>
         </div>
-        <h2> <img class="logo" src="img/html.png" alt=""></h2>
+
     </header>
     <!--Parte um-->
     <main class="inicio">
