Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -37,12 +37,19 @@
         </section>
     </main>
     <!--Parte dois-->
-    <main class="sobre-min">
-        <section class="sobre-min">
-            <h2 class="titulo-de-secao">Sobre Mim</h2>
-            <p class="paragrafo-sm">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis non aut consequuntur esse cupiditate molestiae magnam cumque, amet ducimus veniam expedita officia aliquam deserunt est et quam? Necessitatibus, cum minus.
-            </p>
+    <main class="sobre-mim">
+        <section class="sobre-mim">
+            <div class="left-sobre-mim">
+                <p>
+                    <img src="img/programmer-animate.svg" class="animacao" alt="">
+                </p>
+            </div>
+            <h2 class="titulo-sobre-mim">Sobre Mim</h2>
+            <div class="right-sobre-mim">
+                <p class="paragrafo-sobre-mim">
+                    Rey eventualmente encontra o sabre de luz de Anakin Skywalker na Fortaleza Pirata, e tem uma visão na Força, Maz Kanata diz que o sabre pertenceu a Anakin e Luke, e agora "chama" por Rey, mas ela o rejeita e vai embora. A Primeira Ordem chega na Fortaleza atrás dos mapas, com ajuda da Resistência e do Poe, Han, Finn e Chewbacca conseguem escapar, mas Rey é capturada por Kylo Ren. Ele tenta tirar informações dela, mas ela poderosa na Força e ele não consegue.
+                </p>
+            </div>
         </section>
     </main>
     <!--Parte três-->
