--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
     <main class="inicio">
         <section class="inicio">
             <h2 class="titulo-um">/* Olá muito pazer, Sou </h2>
+            <p class="animacao"></p>
             <h1 class="titulo-pr">Luiz Otávio Nacimento</h1>
+            <p class="animacao"></p>
             <h2 class="titulo-dois">Desenvolvedor Font-end */</h2>
+            <p class="animacao"></p>
             <img src="img/minha-foto.jpeg" class="foto" alt="minha-foto">
         </section>
     </main>
