--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <main class="inicio">
         <section class="inicio">
             <h2 class="titulo-um">/* Olá muito pazer, Sou </h2>
-            <p class="animacao"></p>
+            <p  id="animacao-1"  class="titulo-um"></p>
             <h1 class="titulo-pr">Luiz Otávio Nacimento</h1>
-            <p class="animacao"></p>
+            <p  id="animacao-pr" class="titulo-pr"></p>
             <h2 class="titulo-dois">Desenvolvedor Font-end */</h2>
-            <p class="animacao"></p>
+            <p id="animacao-2" class="titulo-dois"></p>
             <img src="img/minha-foto.jpeg" class="foto" alt="minha-foto">
         </section>
     </main>
