--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
         <section class="inicio">
             <h2 class="titulo-um">/* Olá muito pazer, Sou </h2>
             <p  id="animacao-1"  class="titulo-um"></p>
-            <h1 class="titulo-pr">Luiz Otávio Nacimento</h1>
-            <p  id="animacao-pr" class="titulo-pr"></p>
+
+            <h1 class="titulo-pr animacao-pr">Luiz Otávio Nacimento.</h1>
+          
+
             <h2 class="titulo-dois">Desenvolvedor Font-end */</h2>
             <p id="animacao-2" class="titulo-dois"></p>
+            <a href="ps://www.linkedin.com/in/luizotávionascimento/">Linkedin</a>
+
             <img src="img/minha-foto.jpeg" class="foto" alt="minha-foto">
         </section>
     </main>
