--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <h2 class="titulo-dois">Desenvolvedor Font-end */</h2>
             <p id="animacao-2" class="titulo-dois"></p>
-            <a href="ps://www.linkedin.com/in/luizotávionascimento/">Linkedin</a>
+            <p id="linkedin"> <a  class="linkedin link-linkedin" href="https://www.linkedin.com/in/luizot%C3%A1vionascimento/" target="_blank">Linkedin</a></p>
 
             <img src="img/minha-foto.jpeg" class="foto" alt="minha-foto">
         </section>
