--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <h2 class="titulo-um">/* Olá muito pazer, Sou </h2>
             <p  id="animacao-1"  class="titulo-um"></p>
 
-            <h1 class="titulo-pr animacao-pr">Luiz Otávio Nacimento.</h1>
+            <h1 class="titulo-pr animacao-pr">Luiz Otávio Nascimento.</h1>
           
 
-            <h2 class="titulo-dois">Desenvolvedor Font-end */</h2>
+            <h2 class="titulo-dois">Desenvolvedor Front-end */</h2>
             <p id="animacao-2" class="titulo-dois"></p>
             <p id="linkedin"> <a  class="linkedin link-linkedin" href="https://www.linkedin.com/in/luizot%C3%A1vionascimento/" target="_blank">Linkedin</a></p>
 
