--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                     <li><a href="#">inicio</a></li>
                     <li><a href="#">sobre mim</a></li>
                     <li><a href="#">projetos</a></li>
-                    <li><a href="#">habilidades</a></li>
                 </ul>
             </nav>
             <h2> <img class="logo" src="img/html.png" alt=""></h2>
@@ -30,7 +29,7 @@
     <!--Parte um-->
     <main class="inicio">
         <section class="inicio">
-            <h2 class="titulo-um">/* Olá muito pazer, Sou </h2>
+            <h2 class="titulo-um">/* Olá muito prazer, Sou </h2>
             <p  id="animacao-1"  class="titulo-um"></p>
 
             <h1 class="titulo-pr animacao-pr">Luiz Otávio Nascimento.</h1>
@@ -66,14 +65,26 @@
         </section>
     </main>
     <!--Parte quatro-->
-    <main class="habilidades">
-        <section>
-            <h2 class="titulo-de-secao">Habilidades</h2>
-        </section>
-    </main>
+
     <footer class="footer">
-        <p>contato.luizottavio@gmail.com</p>
-        <p>website by Luiz Otávio Nascimento</p>
+        <div class="conteiner-footer">
+            <p class="creditos">
+                Site feito por Luiz Otávio Nascimento.
+                <br>
+                Email: contato.luizottavio@gmail.com 
+            </p>
+    
+            <p class="copy">copywriting 2023 © </p>
+            <P>
+                <a href="https://www.linkedin.com/in/luizot%C3%A1vionascimento/" target="_blank">
+                    <img class="img-copy-link" src="img/linkedin-logo.png" alt="linkedim-logo">
+                </a>
+                <a href="https://github.com/luizottavio" target="_blank">
+                    <img class="img-copy-git" src="img/github-logo.png" alt="github-logo">
+                </a>
+           
+            </P>
+        </div>
     </footer>
 </body>
 </html>
