--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!--Seção zero // CABEÇALHO*-->
     <header class="header">
         <div class="conteiner">
             <nav> 
@@ -28,17 +29,17 @@
     </header>
     <!--Sessão Um // INICIO-->
     <main class="inicio">
-        <a class="sesãos" name="inicio"></a>
+        <a name="inicio"></a>
         <section class="inicio">
             <h2 class="titulo-um">/* Olá muito prazer, Sou </h2>
             <p  id="animacao-1" class="titulo-um"></p>
 
-            <h1 class="titulo-pr animacao-pr">Luiz Otávio Nascimento.</h1>
+            <h1 class="titulo-principal animacao-principal">Luiz Otávio Nascimento.</h1>
           
             <h2 class="titulo-dois">Desenvolvedor Front-end */</h2>
             <p id="animacao-2" class="titulo-dois"></p>
 
-            <p id="linkedin"> <a  class="linkedin link-linkedin" href="https://www.linkedin.com/in/luizot%C3%A1vionascimento/" target="_blank">Linkedin</a><p>
+            <p> <a  class="button" href="https://www.linkedin.com/in/luizot%C3%A1vionascimento/" target="_blank">Linkedin</a><p>
 
             <img src="img/minha-foto.jpeg" class="foto" alt="minha-foto">
         </section>
