--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luiz Otávio Nacimento</title>
 
+    <!--Links // CSS-->
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/inicio.css">
+    <link rel="stylesheet" href="style/sobre-mim.css">
+    <link rel="stylesheet" href="style/projetos.css">
+
+    <!--Links // APIS-JS-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="font/Minecrafter.Alt.ttf">
   
 </head>
 
 <body>
-    <!--Seção zero // CABEÇALHO*-->
+    <!--Seção zero // CABEÇALHO-->
     <header class="header">
         <div class="conteiner">
             <nav> 
@@ -32,12 +38,12 @@
         <a name="inicio"></a>
         <section class="inicio">
             <h2 class="titulo-um">/* Olá muito prazer, Sou </h2>
-            <p  id="animacao-1" class="titulo-um"></p>
+            <p class="titulo-um linha-um"></p>
 
             <h1 class="titulo-principal animacao-principal">Luiz Otávio Nascimento.</h1>
           
             <h2 class="titulo-dois">Desenvolvedor Front-end */</h2>
-            <p id="animacao-2" class="titulo-dois"></p>
+            <p class="titulo-dois linha-dois"></p>
 
             <p> <a  class="button" href="https://www.linkedin.com/in/luizot%C3%A1vionascimento/" target="_blank">Linkedin</a><p>
 
@@ -61,14 +67,14 @@
             </div>
         </section>
     </main>
-    <!--Sessão três // PROJETOS -->
+    <!--Sessão três // PROJETOS-->
     <main class="projetos">
         <a class="sessãos" name="projetos"></a>
         <section class="projetos">
             <h2 class="titulo-de-secao">Meus Projetos</h2>
         </section>
     </main>
-
+    <!--Sessão quatro // RODAPÉ-->
     <footer class="footer">
         <div class="conteiner-footer">
             <p class="creditos">
@@ -89,7 +95,8 @@
             </P>
         </div>
     </footer>
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="animacao.js"></script>
+    <script src="script/animacao.js"></script>
 </body>
 </html>
