Update -CSS projetos

--- a/index.html
+++ b/index.html
@@ -72,7 +72,18 @@
         <a class="sessãos" name="projetos"></a>
         <section class="projetos">
             <h2 class="titulo-de-secao">Meus Projetos</h2>
-        </section>
+            <div class="conteiner-proj">
+                <div class="cads">
+                    <p class="em-breve">em breve.</p>
+                </div>
+                <div  class="cads">
+                    <p class="em-breve">em breve.</p>
+                </div>
+                <div class="cads">
+                    <p class="em-breve">em breve.</p>
+                </div>
+            </div>
+            </section>
     </main>
     <!--Sessão quatro // RODAPÉ-->
     <footer class="footer">
