--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luiz Otávio Nacimento</title>
+    <title>Portfolio | Luiz Otávio Nacimento</title>
 
     <!--Links // CSS-->
     <link rel="stylesheet" href="style/reset.css">
@@ -71,7 +71,7 @@
     <main class="projetos">
         <a class="sessãos" name="projetos"></a>
         <section class="projetos">
-            <h2 class="titulo-de-secao">Meus Projetos</h2>
+            <h2 class="titulo-projetos">Meus Projetos</h2>
             <div class="conteiner-proj">
                 <div class="cads">
                     <p class="em-breve">em breve.</p>
@@ -83,6 +83,20 @@
                     <p class="em-breve">em breve.</p>
                 </div>
             </div>
+            <div class="conteiner-prnj-esconder hide">
+                <div class="cads">
+                    <p class="em-breve">em breve.</p>
+                </div>
+                <div  class="cads">
+                    <p class="em-breve">em breve.</p>
+                </div>
+                <div class="cads">
+                    <p class="em-breve">em breve.</p>
+                </div>
+            </div>
+            <button class="button-mostra">
+                mostras mais
+            </button>
             </section>
     </main>
     <!--Sessão quatro // RODAPÉ-->
@@ -109,5 +123,6 @@
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="script/animacao.js"></script>
+    <script src="script/menos-mais.js" defer></script>
 </body>
 </html>
