--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <p> <a  class="button" href="https://www.linkedin.com/in/luizot%C3%A1vionascimento/" target="_blank">Linkedin</a><p>
 
-            <img src="img/minha-foto.jpeg" class="foto" alt="minha-foto">
+            <img src="img/minha-ilustrasao.png" class="foto" alt="minha-foto">
         </section>
     </main>
     <!--Sessão Dois // SOBRE MIM-->
