--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <button class="button-mostra">
-                mostras mais
+                mostrar mais
             </button>
             </section>
     </main>
