--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
             <h2 class="titulo-sobre-mim"  data-aos="fade-up">Sobre Mim</h2>
             <div class="right-sobre-mim">
                 <p class="paragrafo-sobre-mim" data-aos="fade-left">
-                    Rey eventualmente encontra o sabre de luz de Anakin Skywalker na Fortaleza Pirata, e tem uma visão na Força, Maz Kanata diz que o sabre pertenceu a Anakin e Luke, e agora "chama" por Rey, mas ela o rejeita e vai embora. A Primeira Ordem chega na Fortaleza atrás dos mapas, com ajuda da Resistência e do Poe, Han, Finn e Chewbacca conseguem escapar, mas Rey é capturada por Kylo Ren. Ele tenta tirar informações dela, mas ela poderosa na Força e ele não consegue.
+                    Olá, meu nome Luiz Otávio Nascimento, sou um fissurado por tecnologia e coisas geeks. Mas falando em tecnologia, conheci o mundo da programação em 2020 quando comecei um curso de HTML5, CSS3 e JAVASCRIPT, posterior mente estudei mais sobre o funcionamento e a história da web, protocolos etc... também estudei um pouco sobre Design.
+                    <br>
+                    <br>
+                    Enfim depois de praticar muito em projetos pessoais e de amigos decidi seguir carreira na área, aí optei a fazer um tecnólogo de Análise e Desenvolvimento de Sistemas no Senac EAD. Hoje estou no primeiro ano do curso.  
                 </p>
             </div>
         </section>
@@ -72,7 +75,7 @@
         <a class="sessãos" name="projetos"></a>
         <section class="projetos">
             <h2 class="titulo-projetos">Meus Projetos</h2>
-            <div class="conteiner-proj">
+            <div class="conteiner-proj"  data-aos="fade-up">
                 <div class="cads">
                     <p class="em-breve">em breve.</p>
                 </div>
@@ -94,7 +97,7 @@
                     <p class="em-breve">em breve.</p>
                 </div>
             </div>
-            <button class="button-mostra">
+            <button class="button-mostra" data-aos="fade-up">
                 mostrar mais
             </button>
             </section>
