--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="conteiner">
             <nav> 
                 <ul>
-                    <li><a class="sessãos" href="#incio">inicio</a></li>
+                    <li><a class="sessãos" href="#inicio">inicio</a></li>
                     <li><a class="sessãos" href="#sobre-mim">sobre mim</a></li>
                     <li><a class="sessãos" href="#projetos">projetos</a></li>
                 </ul>
@@ -62,10 +62,11 @@
             <h2 class="titulo-sobre-mim"  data-aos="fade-up">Sobre Mim</h2>
             <div class="right-sobre-mim">
                 <p class="paragrafo-sobre-mim" data-aos="fade-left">
-                    Olá, meu nome Luiz Otávio Nascimento, sou um fissurado por tecnologia e coisas geeks. Mas falando em tecnologia, conheci o mundo da programação em 2020 quando comecei um curso de HTML5, CSS3 e JAVASCRIPT, posterior mente estudei mais sobre o funcionamento e a história da web, protocolos etc... também estudei um pouco sobre Design.
-                    <br>
-                    <br>
-                    Enfim depois de praticar muito em projetos pessoais e de amigos decidi seguir carreira na área, aí optei a fazer um tecnólogo de Análise e Desenvolvimento de Sistemas no Senac EAD. Hoje estou no primeiro ano do curso.  
+               Olá, meu nome é Luiz Otávio Nascimento, sou um fissurado por tecnologia e coisas geeks. Mas falando de tecnologia, conheci o mundo da programação em 2020 quando comecei um curso de HTML5, CSS3 e JAVASCRIPT, posteriormente estudei mais sobre o funcionamento e história da web, protocolos etc... também estudei um pouco sobre Design.
+               <br>
+               <br>
+                Enfim decidi seguir carreira na área, por isso optei por fazer um tecnólogo de Análise e Desenvolvimento de Sistemas no Senac EAD. Hoje estou no primeiro ano do curso.  
+ 
                 </p>
             </div>
         </section>
