--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="style/sobre-mim.css">
     <link rel="stylesheet" href="style/projetos.css">
 
-    <!--Links // APIS-JS-->
+    
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="font/Minecrafter.Alt.ttf">
+    <!--<link rel="stylesheet" href="font/Minecrafter.Alt.ttf">-->
   
 </head>
 
@@ -25,9 +25,9 @@
         <div class="conteiner">
             <nav> 
                 <ul>
-                    <li><a class="sessãos" href="#inicio">inicio</a></li>
-                    <li><a class="sessãos" href="#sobre-mim">sobre mim</a></li>
-                    <li><a class="sessãos" href="#projetos">projetos</a></li>
+                    <li class="sessaos-um">inicio</li>
+                    <li class="sessaos-dois">sobre mim</li>
+                    <li class="sessaos-tres">projetos</li>
                 </ul>
             </nav>
             <h2> <img class="logo" src="img/html.png" alt="logo-site"></h2>
@@ -35,7 +35,7 @@
     </header>
     <!--Sessão Um // INICIO-->
     <main class="inicio">
-        <a name="inicio"></a>
+        
         <section class="inicio">
             <h2 class="titulo-um">/* Olá muito prazer, Sou </h2>
             <p class="titulo-um linha-um"></p>
@@ -45,14 +45,14 @@
             <h2 class="titulo-dois">Desenvolvedor Front-end */</h2>
             <p class="titulo-dois linha-dois"></p>
 
-            <p> <a  class="button" href="https://www.linkedin.com/in/luizot%C3%A1vionascimento/" target="_blank">Linkedin</a><p>
+            <p> <a class="button" href="https://www.linkedin.com/in/luizot%C3%A1vionascimento/" target="_blank">Linkedin</a><p>
 
             <img src="img/minha-ilustrasao.png" class="foto float" alt="minha-foto">
         </section>
     </main>
     <!--Sessão Dois // SOBRE MIM-->
     <main class="sobre-mim">
-        <a class="sessãos" name="sobre-mim"></a>
+        <!--AAA-->
         <section class="sobre-mim">
             <div class="left-sobre-mim" data-aos="fade-right">
                 <p>
@@ -73,7 +73,6 @@
     </main>
     <!--Sessão três // PROJETOS-->
     <main class="projetos">
-        <a class="sessãos" name="projetos"></a>
         <section class="projetos">
             <h2 class="titulo-projetos">Meus Projetos</h2>
             <div class="conteiner-proj"  data-aos="fade-up">
@@ -127,6 +126,7 @@
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="script/animacao.js"></script>
-    <script src="script/menos-mais.js" defer></script>
+    <script src="script/menos-mais.js" defer></script>\
+    <script src="script/scrol.js"></script>
 </body>
 </html>
