--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <div class="conteiner">
             <nav> 
                 <ul>
-                    <li class="sessaos-um">inicio</li>
-                    <li class="sessaos-dois">sobre mim</li>
-                    <li class="sessaos-tres">projetos</li>
+                    <li class="sessaos-um" id="sessaos">inicio</li>
+                    <li class="sessaos-dois" id="sessaos">sobre mim</li>
+                    <li class="sessaos-tres" id="sessaos">projetos</li>
                 </ul>
             </nav>
             <h2> <img class="logo" src="img/html.png" alt="logo-site"></h2>
@@ -77,7 +77,8 @@
             <h2 class="titulo-projetos">Meus Projetos</h2>
             <div class="conteiner-proj"  data-aos="fade-up">
                 <div class="cads">
-                    <p class="em-breve">em breve.</p>
+                    <p class="em-breve"></p>
+                    <a id="em-breve" href="indext.html" target="_blank">quiz</a>
                 </div>
                 <div  class="cads">
                     <p class="em-breve">em breve.</p>
@@ -119,14 +120,14 @@
                 </a>
                 <a href="https://github.com/luizottavio" target="_blank">
                     <img class="img-copy-git" src="img/github-logo.png" alt="github-logo">
-                </a>    
+                </a>  
             </P>
         </div>
     </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="script/animacao.js"></script>
-    <script src="script/menos-mais.js" defer></script>\
+    <script src="script/menos-mais.js" defer></script>
     <script src="script/scrol.js"></script>
 </body>
 </html>
