--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
         <section class="projetos">
             <h2 class="titulo-projetos">Meus Projetos</h2>
             <div class="conteiner-proj"  data-aos="fade-up">
-                <div class="cads">
-                    <p class="em-breve"></p>
-                    <a id="em-breve" href="indext.html" target="_blank">quiz</a>
+                <div class="cads" >
+                    <a id="em-breve" href="Quiz-Geek/one-piece/index.html" target="_blank">quiz</a>
                 </div>
                 <div  class="cads">
                     <p class="em-breve">em breve.</p>
